vlib/v/checker/tests/wrong_struct_init_err.vv
module main

import net.http
_ := http.Response{header: http.new_header{} }

